--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-router": "^5.1.17",
     "apexcharts": "^3.29.0",
     "bootstrap": "^5.1.3",
     "jquery.js": "^0.0.2-security",
@@ -17,7 +18,7 @@
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
-    "react-router": "^6.0.0",
+    "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
