--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-router": "^5.1.17",
     "apexcharts": "^3.29.0",
+    "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "jquery.js": "^0.0.2-security",
     "popper.js": "^1.16.1",
